--- a/redux-dux-getting-started/cilamp.html
+++ b/redux-dux-getting-started/cilamp.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>MEVISIO</title>
-    <meta name="description" content="MEVISIO + CILAMP">
+    <title>2lach</title>
+    <meta name="description" content="2lach + CILAMP">
 
     <!-- URL CANONICAL -->
-    <link rel="canonical" href="https://docs.mevisio.com/">
+    <link rel="canonical" href="https://docs.2lach.com/">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
@@ -37,7 +37,7 @@
 
     <header role="banner">
       <nav role="navigation">
-        <p class="logo"><a href="index.html" title="MEVISIO">MEVISIO</a></p>
+        <p class="logo"><a href="index.html" title="2lach">2lach</a></p>
         <ul>
           <li class="github">
             <a rel="external" href="https://github.com/webslides/webslides" title="Github">
@@ -64,11 +64,11 @@
 
         <!-- Slide 1 -->
         <section class="bg-black">
-          <span class="background dark" style="background-image:url('//cdn.mevisio.com/wallpapers/concert.jpg')"></span>
+          <span class="background dark" style="background-image:url('//cdn.2lach.com/wallpapers/concert.jpg')"></span>
           <div class="wrap aligncenter">
               <h1><strong>CILAMP Integration</strong></h1>
               <p class="text-intro">
-                <br>An introduction to integrating your CILAMP with the MEVISIO platform.
+                <br>An introduction to integrating your CILAMP with the 2lach platform.
               </p>
           </div>
         </section>
@@ -100,7 +100,7 @@
                 </ul>
               </div>
               <div class="column">
-<pre>import data from '@mevisio/data';</pre>
+<pre>import data from '@2lach/data';</pre>
               </div>
             </div>
           </div>
