--- a/redux-dux-getting-started/intro.html
+++ b/redux-dux-getting-started/intro.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
 
   <!-- URL CANONICAL -->
-  <link rel="canonical" href="https://docs.mevisio.com/">
+  <link rel="canonical" href="https://docs.2lach.com/">
 
   <!-- Google Fonts -->
   <link
@@ -68,7 +68,7 @@
 
       <!-- Slide 1 -->
       <section class="bg-black">
-        <span class="background dark" style="background-image:url('//cdn.mevisio.com/wallpapers/concert.jpg')"></span>
+        <span class="background dark" style="background-image:url('//cdn.2lach.com/wallpapers/concert.jpg')"></span>
         <div class="wrap aligncenter">
           <h1><strong>Redux</strong></h1>
           <p class="text-intro">
