--- a/redux-dux-getting-started/code.html
+++ b/redux-dux-getting-started/code.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>MEVISIO</title>
-    <meta name="description" content="About custom code in MEVISIO">
+    <title>2lach</title>
+    <meta name="description" content="About custom code in 2lach">
 
     <!-- URL CANONICAL -->
-    <link rel="canonical" href="https://docs.mevisio.com/">
+    <link rel="canonical" href="https://docs.2lach.com/">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,700,700i%7CMaitree:200,300,400,600,700&amp;subset=latin-ext" rel="stylesheet">
@@ -39,12 +39,12 @@
 
         <!-- Slide 1 -->
         <section class="bg-black">
-          <span class="background dark" style="background-image:url('//cdn.mevisio.com/wallpapers/concert.jpg')"></span>
+          <span class="background dark" style="background-image:url('//cdn.2lach.com/wallpapers/concert.jpg')"></span>
           <div class="wrap size-50 frame">
-              <h2 class="text-serif aligncenter">Custom code in MEVISIO</h2>
+              <h2 class="text-serif aligncenter">Custom code in 2lach</h2>
               <p class="text-symbols">&mdash;</p>
               <p class="text-intro">
-                An introduction to writing custom JavaScript code in the MEVISIO
+                An introduction to writing custom JavaScript code in the 2lach
                 platform to perform complex tasks that goes beyond JSON configuration.
               </p>
           </div>
@@ -77,7 +77,7 @@
                 </ul>
               </div>
               <div class="column">
-<pre>import data from '@mevisio/data';</pre>
+<pre>import data from '@2lach/data';</pre>
               </div>
             </div>
           </div>
