--- a/redux-dux-getting-started/index.html
+++ b/redux-dux-getting-started/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>MEVISIO</title>
+    <title>2lach</title>
   </head>
   <body>
     <h1>Presentations</h1>
